--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           <li><a href="#projects">Projetos</a></li>
           <li><a href="#footer">Contato</a></li>
         </ul>
+        <button id="theme-toggle" class="theme-toggle" aria-label="Alternar tema" title="Alternar tema">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+            <path d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </button>
         <div class="navbar__mobile">
           <img
             src="src/images/navbar/menu.svg"
