feat: adiciona novo projeto

--- a/index.html
+++ b/index.html
@@ -36,9 +36,27 @@
           <li><a href="#projects">Projetos</a></li>
           <li><a href="#footer">Contato</a></li>
         </ul>
-        <button id="theme-toggle" class="theme-toggle" aria-label="Alternar tema" title="Alternar tema">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-            <path d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        <button
+          id="theme-toggle"
+          class="theme-toggle"
+          aria-label="Alternar tema"
+          title="Alternar tema"
+        >
+          <svg
+            width="18"
+            height="18"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+          >
+            <path
+              d="M21 12.79A9 9 0 1111.21 3a7 7 0 109.79 9.79z"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            />
           </svg>
         </button>
         <div class="navbar__mobile">
@@ -184,13 +202,21 @@
           </li>
           <li class="skill__item">
             <div class="image-container">
-              <img src="src/images/skills/laravel.png" alt="Laravel" loading="lazy" />
+              <img
+                src="src/images/skills/laravel.png"
+                alt="Laravel"
+                loading="lazy"
+              />
             </div>
             <h3>Laravel</h3>
           </li>
           <li class="skill__item">
             <div class="image-container">
-              <img src="src/images/skills/reactjs.png" alt="ReactJS" loading="lazy" />
+              <img
+                src="src/images/skills/reactjs.png"
+                alt="ReactJS"
+                loading="lazy"
+              />
             </div>
             <h3>ReactJS</h3>
           </li>
@@ -231,7 +257,7 @@
               class="carousel__slide"
               role="group"
               aria-roledescription="slide"
-              aria-label="1 de 3"
+              aria-label="1 de 4"
             >
               <div class="image">
                 <img
@@ -258,7 +284,7 @@
               class="carousel__slide"
               role="group"
               aria-roledescription="slide"
-              aria-label="2 de 3"
+              aria-label="2 de 4"
             >
               <div class="image">
                 <img
@@ -284,7 +310,7 @@
               class="carousel__slide"
               role="group"
               aria-roledescription="slide"
-              aria-label="3 de 3"
+              aria-label="3 de 4"
             >
               <div class="image">
                 <img
@@ -301,6 +327,33 @@
                 </p>
                 <a
                   href="https://ygorportes.github.io/password-generator/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Ver projeto &rarr;</a
+                >
+              </div>
+            </article>
+            <article
+              class="carousel__slide"
+              role="group"
+              aria-roledescription="slide"
+              aria-label="4 de 4"
+            >
+              <div class="image">
+                <img
+                  src="src/images/projects/this-day-that-never-ends.png"
+                  alt="Esse Dia Que Nunca Acaba"
+                  loading="lazy"
+                />
+              </div>
+              <div class="projects__info">
+                <h3>Esse Dia Que Nunca Acaba</h3>
+                <p>
+                  Um projetinho simples pra te lembrar que o expediente ainda
+                  não acabou... e que o fim de semana ainda tá longe.
+                </p>
+                <a
+                  href="https://ygorportes.github.io/this-day-that-never-ends/"
                   target="_blank"
                   rel="noopener noreferrer"
                   >Ver projeto &rarr;</a
